--- a/cplus.html
+++ b/cplus.html
@@ -430,7 +430,7 @@
 						<h2>1. C++ if Statement</h2>
 						<p>The if statement evaluates the condition inside the parentheses ( ).
 						<li>If the condition evaluates to true, the code inside the body of if is executed.</li>
-						<li>If the condition evaluates to false, the code inside the body of if is skipped.</li></p><br>
+						<li>If the condition evaluates to false, the code inside the body of if is skipped.</li></p>
 
 						<div class="syntax">
 							<p>Syntax</p>
@@ -461,7 +461,7 @@
 						<li>the code inside the body of else is skipped from execution</li>
 						If the condition evaluates false,
 						<li>the code inside the body of else is executed</li>
-						<li>the code inside the body of if is skipped from execution</li><br>
+						<li>the code inside the body of if is skipped from execution</li>
 						<div class="syntax">
 							<p>Syntax</p>
 							<div class="image">
@@ -495,7 +495,7 @@
 						</div>
 
 						<h2>4. Short Hand If...Else (Ternary Operator)</h2>
-						<p>There is also a short-hand if else, which is known as the ternary operator because it consists of three operands. It can be used to replace multiple lines of code with a single line. It is often used to replace simple if else statements:</p><br>
+						<p>There is also a short-hand if else, which is known as the ternary operator because it consists of three operands. It can be used to replace multiple lines of code with a single line. It is often used to replace simple if else statements:</p>
 						<div class="syntax">
 							<p>Syntax</p>
 							<div class="image">
@@ -519,7 +519,7 @@
 				<div class="switch hide small-txt">
 					<div class="theory"><br>
 						<p>The switch statement is a multway statement. If there is a possibility to make a choice from given options, this structured selection is useful. The switch statement only requires one argument of any data type to be checked with the given number of case options.</p><br><p>Here switch, case and default are reserved keywords and every case statement terminates with colon(:)
-It is mainly used for menu driven programs.</p><br>
+It is mainly used for menu driven programs.</p>
 							<div class="syntax">
 							<p>Syntax</p>
 							<div class="image">
@@ -560,7 +560,7 @@ It is mainly used for menu driven programs.</p><br>
 							<li><b>Exit Controlled Loops:</b> In this type of loop the test condition is tested or evaluated at the end of the loop body. Therefore, the loop body will execute at least once, irrespective of whether the test condition is true or false. the <b>do-while loop</b> is exit controlled loop.</li>
 						</ol><br>
 						<h2>For Loop</h2>
-						<p>A For loop is a repetition control structure that allows us to write a loop that is executed a specific number of times.</p><br>
+						<p>A For loop is a repetition control structure that allows us to write a loop that is executed a specific number of times.</p>
 						<div class="syntax">
 								<h2> Syntax</h2>
 							<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #000080; font-weight: bold">for</span> (initialization expr; test expr; update expr)
@@ -571,7 +571,7 @@ It is mainly used for menu driven programs.</p><br>
 </pre></div></div>
 						</div>
 						<h2>While Loop</h2>
-						<p>While studying for loop we have seen that the number of iterations is known beforehand, i.e. the number of times the loop body is needed to be executed is known to us. while loops are used in situations where we do not know the exact number of iterations of the loop beforehand.</p><br>
+						<p>While studying for loop we have seen that the number of iterations is known beforehand, i.e. the number of times the loop body is needed to be executed is known to us. while loops are used in situations where we do not know the exact number of iterations of the loop beforehand.</p>
 						<div class="syntax">
 								<p>Syntax</p>
 							<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">initialization expression;
@@ -585,7 +585,7 @@ It is mainly used for menu driven programs.</p><br>
 </div>
 						</div>
 						<h2>Do-while loop</h2>
-					    <p>In a do-while loop, the loop body will execute at least once irrespective of the test condition.</p><br>
+					    <p>In a do-while loop, the loop body will execute at least once irrespective of the test condition.</p>
 					    <div class="syntax">
 								<h2> Syntax</h2>
 							<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">initialization expression;
@@ -787,7 +787,7 @@ It is mainly used for menu driven programs.</p><br>
 
 							<li>Deleting − helps in deleting the element in an array</li><br>
 							<h2>Declare Array</h2>
-							<p>To declare an array, define the variable type, specify the name of the array followed by square brackets and specify the number of elements it should store:</p><br>
+							<p>To declare an array, define the variable type, specify the name of the array followed by square brackets and specify the number of elements it should store:</p>
 							<div class="syntax">
 								<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">string name[<span style="color: #0000FF">4</span>];
 
@@ -796,7 +796,7 @@ string fruits[<span style="color: #0000FF">3</span>] = {<span style="color: #000
 </div>
 							</div>
 							<h2>Access the Elements of an Array</h2>
-							<p>You access an array element by referring to the index number inside square brackets [].</p><br>
+							<p>You access an array element by referring to the index number inside square brackets [].</p>
 							<div class="syntax">
 								<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">string fruits[<span style="color: #0000FF">3</span>] = {<span style="color: #0000FF">&quot;Mango&quot;</span>, <span style="color: #0000FF">&quot;Apple&quot;</span>, <span style="color: #0000FF">&quot;Orange&quot;</span>};
 
@@ -806,7 +806,7 @@ cout &lt;&lt; fruits[<span style="color: #0000FF">2</span>];  <span style="color
 </div>
 							</div>
 							<h2>Change an Array Element</h2>
-							<p>To change the value of a specific element, refer to the index number:</p><br>
+							<p>To change the value of a specific element, refer to the index number:</p>
 							<div class="syntax">
 								<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">string fruits[<span style="color: #0000FF">3</span>] = {<span style="color: #0000FF">&quot;Mango&quot;</span>, <span style="color: #0000FF">&quot;Apple&quot;</span>, <span style="color: #0000FF">&quot;Orange&quot;</span>};
 
@@ -850,6 +850,94 @@ cout &lt;&lt; fruits[<span style="color: #0000FF">2</span>];  <span style="color
 				</div>
 
 				<div class="func hide small-txt">
+					<div class="theory"><br>
+						<h2>Function Declaration</h2>
+						<p>A function declaration tells the compiler about the number of parameters function takes data-types of parameters, and returns the type of function. Putting parameter names in the function declaration is optional in the function declaration, but it is necessary to put them in the definition.</p>
+						<div class="syntax">
+							<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #008800; font-style: italic">// C++ Program to show function that takes</span>
+<span style="color: #008800; font-style: italic">// two integers as parameters and returns</span>
+<span style="color: #008800; font-style: italic">// an integer</span>
+<span style="color: #000080; font-weight: bold">int</span> add(<span style="color: #000080; font-weight: bold">int</span>, <span style="color: #000080; font-weight: bold">int</span>);
+ 
+<span style="color: #008800; font-style: italic">// A function that takes an int</span>
+<span style="color: #008800; font-style: italic">// pointer and an int variable</span>
+<span style="color: #008800; font-style: italic">// as parameters and returns</span>
+<span style="color: #008800; font-style: italic">// a pointer of type int</span>
+<span style="color: #000080; font-weight: bold">int</span>* swap(<span style="color: #000080; font-weight: bold">int</span>*, <span style="color: #000080; font-weight: bold">int</span>);
+ 
+<span style="color: #008800; font-style: italic">// A function that takes</span>
+<span style="color: #008800; font-style: italic">// a char as parameter and</span>
+<span style="color: #008800; font-style: italic">// returns a reference variable</span>
+<span style="color: #000080; font-weight: bold">char</span>* call(<span style="color: #000080; font-weight: bold">char</span> b);
+ 
+<span style="color: #008800; font-style: italic">// A function that takes a</span>
+<span style="color: #008800; font-style: italic">// char and an int as parameters</span>
+<span style="color: #008800; font-style: italic">// and returns an integer</span>
+<span style="color: #000080; font-weight: bold">int</span> word(<span style="color: #000080; font-weight: bold">char</span>, <span style="color: #000080; font-weight: bold">int</span>);
+</pre></div>
+</div>
+						</div>
+						<h2>Creating a Function</h2>
+						<p>To create (often referred to as declare) a function, specify return type, then name of the function, followed by parentheses ()</p>
+						<div class="syntax">
+							<p>Syntax</p>
+								<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #000080; font-weight: bold">void</span> newFunction() {
+  <span style="color: #008800; font-style: italic">// code to be executed</span>
+}
+</pre></div>
+</div>
+							</div>
+							<li><b>newFunction()</b> is the name of the function</li>
+							<li><b>void</b> means that the function does not have a return value.</li>
+							<li>inside the function (the body), add code that defines what the function should perform.</li><br>
+							<h2>Calling a Function</h2>
+							<p>To call a function, write the function's name followed by two parentheses () and a semicolon ;</p>
+							<div class="syntax">
+								<div class="image"><!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #008800; font-style: italic">// Create a function</span>
+<span style="color: #000080; font-weight: bold">void</span> newFunction() {
+  cout &lt;&lt; <span style="color: #0000FF">&quot;Function executed!&quot;</span>;
+}
+
+<span style="color: #000080; font-weight: bold">int</span> main() {
+  newFunction(); <span style="color: #008800; font-style: italic">// function calling</span>
+  <span style="color: #000080; font-weight: bold">return</span> <span style="color: #0000FF">0</span>;
+}
+
+<span style="color: #008800; font-style: italic">// Output</span>
+<span style="color: #008800; font-style: italic">// Function executed!</span>
+</pre></div>
+</div>
+							</div>
+							<h2>Recursion</h2>
+							<p>A function that calls itself is known as a <b>recursive function</b>.  This technique provides a way to break complicated problems down into simple problems which are easier to solve.</p>
+							<div class="syntax">
+								<p>Example</p>
+								<div class="image">
+									<!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #000080; font-weight: bold">int</span> sum(<span style="color: #000080; font-weight: bold">int</span> k) 
+{
+  <span style="color: #000080; font-weight: bold">if</span> (k &gt; <span style="color: #0000FF">0</span>) {
+    <span style="color: #000080; font-weight: bold">return</span> k + sum(k - <span style="color: #0000FF">1</span>);
+  } 
+  <span style="color: #000080; font-weight: bold">else</span> {
+    <span style="color: #000080; font-weight: bold">return</span> <span style="color: #0000FF">0</span>;
+  }
+}
+
+<span style="color: #000080; font-weight: bold">int</span> main() 
+{
+  <span style="color: #000080; font-weight: bold">int</span> result = sum(<span style="color: #0000FF">10</span>);
+  cout &lt;&lt; result;
+  <span style="color: #000080; font-weight: bold">return</span> <span style="color: #0000FF">0</span>;
+}
+</pre></div>
+</div>
+							</div>
+							<h2>Example Explained</h2>
+							<div class="syntax">
+								<div class="image"><img src="cplus_prog/code_img/recursion.PNG"></div>
+							</div>
+							<p>When the sum() function is called, it adds parameter k to the sum of all numbers smaller than k and returns the result. When k becomes 0, the function just returns 0.</p><p>Since the function does not call itself when k is 0, the program stops there and returns the result.</p>
+					</div>
 					<ul class="Searching">
 						<li><a href="cplus_prog/65sumFun1.html"><div class="number">1</div><span>WAP for sum of two numbers using function.</span></a></li>
 						<li><a href="cplus_prog/66calcFun2.html"><div class="number">2</div><span>WAP to build a calculator using functions.</span></a></li>
