--- a/cplus.html
+++ b/cplus.html
@@ -538,7 +538,7 @@ It is mainly used for menu driven programs.</p>
 						</div>
 						<div class="syntax">
 								<h2> Switch Case Flowchart </h2>
-							<div class="image"><img src="cplus_prog/code_img/switch.PNG" ></div>
+							<div class="image"><img src="cplus_prog/code_img/switch.png" ></div>
 						</div>
 					</div>
 					<ul class="Searching">
